examples/ansible_azure_ansible_demo/files/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_gitlab_name": {
            "defaultValue": "gitlab",
            "type": "String"
        },
        "virtualMachines_ansible_name": {
            "defaultValue": "ansible",
            "type": "String"
        },
        "virtualMachines_jumphost_name": {
            "defaultValue": "jumphost",
            "type": "String"
        },
        "storageAccounts_gitlab6506_name": {
            "defaultValue": "gitlab6506",
            "type": "String"
        },
        "storageAccounts_ansible1278_name": {
            "defaultValue": "ansible1278",
            "type": "String"
        },
        "storageAccounts_jumphost6024_name": {
            "defaultValue": "jumphost6024",
            "type": "String"
        },
        "virtualNetworks_cloud_msp_gitlab_demo_net_name": {
            "defaultValue": "cloud-msp-gitlab-demo-net",
            "type": "String"
        },
        "networkInterfaces_cloud_msp_gitlab_demo_gitlab_nic_name": {
            "defaultValue": "cloud-msp-gitlab-demo-gitlab-nic",
            "type": "String"
        },
        "networkInterfaces_cloud_msp_gitlab_demo_ansible_nic_name": {
            "defaultValue": "cloud-msp-gitlab-demo-ansible-nic",
            "type": "String"
        },
        "networkInterfaces_cloud_msp_gitlab_demo_jumphost_nic_name": {
            "defaultValue": "cloud-msp-gitlab-demo-jumphost-nic",
            "type": "String"
        },
        "networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name": {
            "defaultValue": "cloud-msp-gitlab-demo-secgroup",
            "type": "String"
        },
        "publicIPAddresses_cloud_msp_gitlab_demo_gitlab_publicip_name": {
            "defaultValue": "cloud-msp-gitlab-demo-gitlab-publicip",
            "type": "String"
        },
        "publicIPAddresses_cloud_msp_gitlab_demo_ansible_publicip_name": {
            "defaultValue": "cloud-msp-gitlab-demo-ansible-publicip",
            "type": "String"
        },
        "publicIPAddresses_cloud_msp_gitlab_demo_jumphost_publicip_name": {
            "defaultValue": "cloud-msp-gitlab-demo-jumphost-publicip",
            "type": "String"
        },
        "securityRules_SSH_name": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "securityRules_HTTP_name": {
            "defaultValue": "HTTP",
            "type": "String"
        },
        "securityRules_HTTPS_name": {
            "defaultValue": "HTTPS",
            "type": "String"
        },
        "subnets_cloud_msp_gitlab_demo_subnet_name": {
            "defaultValue": "cloud-msp-gitlab-demo-subnet",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Compute/virtualMachines/ansible'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_ansible_name')]",
            "apiVersion": "2017-03-30",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOS",
                        "sku": "7.3",
                        "version": "7.3.20170925"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_ansible_name'),'.vhd')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_ansible1278_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_ansible_name'),'.vhd'))]"
                        },
                        "caching": "ReadOnly",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ansible_name')]",
                    "adminUsername": "cloud_user",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/cloud_user/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQClumoBR/nnZfhhUFNGBtCYf1Sa4u+QzMf6OrzExNcnWxHvctdLxJozH1PZGt4CrcJ7Tp6roBXU0ZdqsYDZW+slICeIudvUerMqJEvzA7SWAEaawfenC9QJuxbzd8VOZi3DxURw6nE2mhgtFb1v4oepJkdVQFwc1PQIqE8W3jBjLguUn+TfJQpjF6aFJdDR+KQmI/DWDpsLXy2g56lIWaJP5Wv0eX4WarFQnAIN9eKn8o4CqccYwJ1a/TWyVgpFpUGU2nZoY2FF1oU+8n17RGqh3yoEoDC/c6GTgVfb3KWnx6Ai9zyj686vMnPfPca/q/YkYLUUg5Co/EQu1NwmoNKp tony@localhost.localdomain"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_ansible_nic_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_ansible1278_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_ansible_nic_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Compute/virtualMachines/gitlab'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_gitlab_name')]",
            "apiVersion": "2017-03-30",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOS",
                        "sku": "7.3",
                        "version": "7.3.20170925"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_gitlab_name'),'.vhd')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_gitlab6506_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_gitlab_name'),'.vhd'))]"
                        },
                        "caching": "ReadOnly",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_gitlab_name')]",
                    "adminUsername": "cloud_user",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/cloud_user/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQClumoBR/nnZfhhUFNGBtCYf1Sa4u+QzMf6OrzExNcnWxHvctdLxJozH1PZGt4CrcJ7Tp6roBXU0ZdqsYDZW+slICeIudvUerMqJEvzA7SWAEaawfenC9QJuxbzd8VOZi3DxURw6nE2mhgtFb1v4oepJkdVQFwc1PQIqE8W3jBjLguUn+TfJQpjF6aFJdDR+KQmI/DWDpsLXy2g56lIWaJP5Wv0eX4WarFQnAIN9eKn8o4CqccYwJ1a/TWyVgpFpUGU2nZoY2FF1oU+8n17RGqh3yoEoDC/c6GTgVfb3KWnx6Ai9zyj686vMnPfPca/q/YkYLUUg5Co/EQu1NwmoNKp tony@localhost.localdomain"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_gitlab_nic_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_gitlab6506_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_gitlab_nic_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Compute/virtualMachines/jumphost'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_jumphost_name')]",
            "apiVersion": "2017-03-30",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Basic_A0"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOS",
                        "sku": "7.3",
                        "version": "7.3.20170925"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_jumphost_name'),'.vhd')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_jumphost6024_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_jumphost_name'),'.vhd'))]"
                        },
                        "caching": "ReadOnly",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_jumphost_name')]",
                    "adminUsername": "cloud_user",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/cloud_user/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQClumoBR/nnZfhhUFNGBtCYf1Sa4u+QzMf6OrzExNcnWxHvctdLxJozH1PZGt4CrcJ7Tp6roBXU0ZdqsYDZW+slICeIudvUerMqJEvzA7SWAEaawfenC9QJuxbzd8VOZi3DxURw6nE2mhgtFb1v4oepJkdVQFwc1PQIqE8W3jBjLguUn+TfJQpjF6aFJdDR+KQmI/DWDpsLXy2g56lIWaJP5Wv0eX4WarFQnAIN9eKn8o4CqccYwJ1a/TWyVgpFpUGU2nZoY2FF1oU+8n17RGqh3yoEoDC/c6GTgVfb3KWnx6Ai9zyj686vMnPfPca/q/YkYLUUg5Co/EQu1NwmoNKp tony@localhost.localdomain"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_jumphost_nic_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_jumphost6024_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cloud_msp_gitlab_demo_jumphost_nic_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkInterfaces/cloud-msp-gitlab-demo-ansible-nic'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_cloud_msp_gitlab_demo_ansible_nic_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "fa5960c9-ae62-4f4b-a343-7b9cfd259878",
                "ipConfigurations": [
                    {
                        "name": "default",
                        "etag": "W/\"f5d3f45b-45ca-4d2b-9efc-7e6089b44d53\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_ansible_publicip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ansible_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_ansible_publicip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ansible_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkInterfaces/cloud-msp-gitlab-demo-gitlab-nic'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_cloud_msp_gitlab_demo_gitlab_nic_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "00c44835-196c-4d46-afa0-0c3a6db4ae92",
                "ipConfigurations": [
                    {
                        "name": "default",
                        "etag": "W/\"41d0956f-7892-44a8-9e42-f5ba21faca23\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_gitlab_publicip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_gitlab_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_gitlab_publicip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_gitlab_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkInterfaces/cloud-msp-gitlab-demo-jumphost-nic'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_cloud_msp_gitlab_demo_jumphost_nic_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "3ea7aec2-0dca-4ae7-90d0-32035bb781dd",
                "ipConfigurations": [
                    {
                        "name": "default",
                        "etag": "W/\"4a0fd18d-373a-4584-a1e1-58453d5a00e7\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_jumphost_publicip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_jumphost_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cloud_msp_gitlab_demo_jumphost_publicip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_jumphost_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkSecurityGroups/cloud-msp-gitlab-demo-secgroup'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "604b5a37-ee5c-4d3b-b499-117daef2c804",
                "securityRules": [
                    {
                        "name": "SSH",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1002,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1003,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"b90370ec-a001-47c6-b2f8-b2f51928267f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/publicIPAddresses/cloud-msp-gitlab-demo-ansible-publicip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_cloud_msp_gitlab_demo_ansible_publicip_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f75ecdf7-cb2c-46f8-8539-c42eadf7a3e2",
                "ipAddress": "51.141.51.23",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/publicIPAddresses/cloud-msp-gitlab-demo-gitlab-publicip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_cloud_msp_gitlab_demo_gitlab_publicip_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "04539172-59b2-4502-ab8c-acaf8d2ae936",
                "ipAddress": "51.141.46.132",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/publicIPAddresses/cloud-msp-gitlab-demo-jumphost-publicip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_cloud_msp_gitlab_demo_jumphost_publicip_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "ded2e16d-c95f-4283-89c8-30477edf7ee5",
                "ipAddress": "51.141.40.156",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/virtualNetworks/cloud-msp-gitlab-demo-net'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "33b91c50-255e-494e-92eb-e85490c71328",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "cloud-msp-gitlab-demo-subnet",
                        "etag": "W/\"ba466965-fadb-492d-80bb-c6c722c4a936\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.1.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Storage/storageAccounts/ansible1278'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_ansible1278_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Storage/storageAccounts/gitlab6506'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_gitlab6506_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Storage/storageAccounts/jumphost6024'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_jumphost6024_name')]",
            "apiVersion": "2017-06-01",
            "location": "ukwest",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkSecurityGroups/cloud-msp-gitlab-demo-secgroup/securityRules/SSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'), '/', parameters('securityRules_SSH_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1001,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkSecurityGroups/cloud-msp-gitlab-demo-secgroup/securityRules/HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'), '/', parameters('securityRules_HTTP_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1002,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/networkSecurityGroups/cloud-msp-gitlab-demo-secgroup/securityRules/HTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'), '/', parameters('securityRules_HTTPS_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1003,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cloud_msp_gitlab_demo_secgroup_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/1b2f8678-65b9-4dd5-8b4a-b15a949ee7ef/resourceGroups/cloud-msp-gitlab-demo/providers/Microsoft.Network/virtualNetworks/cloud-msp-gitlab-demo-net/subnets/cloud-msp-gitlab-demo-subnet'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'), '/', parameters('subnets_cloud_msp_gitlab_demo_subnet_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_cloud_msp_gitlab_demo_net_name'))]"
            ]
        }
    ]
}
